# mybank

./: .gitignore  README.md  pyproject.toml
src/mybank/: budget.py  utils.py
src/mybank/data/: __init__.py  danskebank.py  lsb.py
