[tool.poetry]
name = "mybank"
version = "0.1.0"
description = ""
authors = ["William Marstrand <wdmdevelop@gmail.com>"]
readme = "README.md"
packages = [{include = "mybank", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
pygments = "^2.17.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly-express = "^0.4.1"
nbformat = "^5.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
